Release 1.0.0 (#2)
* Saving the code so I can work on other devices

* Improved the code and added more and better unit tests

* added pipeline for unit tests

* fix