@@ -1,32 +1,26 @@
 package knight.lib.std;
 
+import knight.compiler.lexer.Tokens;
+import knight.lib.Library;
+import knight.lib.signatures.FunctionSignature;
+
 import java.util.ArrayList;
 import java.util.List;
-import knight.lib.FunctionSignature;
-import knight.lib.Library;
-import knight.compiler.lexer.Tokens;
-import java.util.Arrays;
-import knight.utils.FileContentLoader;
 
-public class StdLib implements Library
+public class StdLib extends Library
 {
 	private final List<FunctionSignature> functions = new ArrayList<>();
 
 	public StdLib()
 	{
-		this.functions.add(new FunctionSignature("print", Tokens.VOID, Arrays.asList(Tokens.STRING)));
+		this.functions.add(new FunctionSignature("print", this.getType(Tokens.STRING),
+				List.of(this.getType(Tokens.STRING), this.getType(Tokens.INTEGER))));
 	}
 
 	@Override
 	public String getName()
 	{
 		return "std";
-	}
-
-	@Override
-	public String getNamespace()
-	{
-		return "knight::std::";
 	}
 
 	@Override
